# ledger-avalanche

./: .gitignore  .gitmodules  .releaserc  Cargo.toml  Justfile  Makefile  README.md  ledger_app.toml  rust-toolchain.toml
app/: Cargo.toml  Makefile  Makefile.conf  Makefile.erc20  Makefile.rust  Makefile.version
app-derive/: Cargo.toml
app-derive/src/: enum_init.rs  lib.rs  match_ranges.rs  unroll.rs  utils.rs  version.rs
app-derive/tests/: version.rs
app/.cargo/: config
app/c/: handler.c  handler.h  main.c  rslib.h  utils.c
app/output/: app.apdu  app.sha256
app/pkg/: installer_s.sh  installer_s2.sh  installer_x.sh
app/rust/: Cargo.toml  build.rs
app/rust/.cargo/: config  config.toml
app/rust/include/: rslib.h
app/rust/src/: constants.rs  crypto.rs  dispatcher.rs  ffi.rs  handlers.rs  lib.rs  parser.rs  sys.rs  utils.rs  zxerror.rs
app/rust/src/common/: parser.h  parser_common.h
app/rust/src/ffi/: context.rs  eth_public_key.rs  eth_tx.rs  ext_public_key.rs  nft_info.rs  public_key.rs  sign_hash.rs  wallet_id.rs
app/rust/src/handlers/: avax.rs  dev.rs  eth.rs  lock.rs  public_key.rs  utils.rs  version.rs  wallet_id.rs
app/rust/src/handlers/avax/: message.rs  sign_hash.rs  signing.rs
app/rust/src/handlers/dev/: debug.rs
app/rust/src/handlers/eth/: get_app_configuration.rs  personal_msg.rs  provide_erc20.rs  provide_nft_info.rs  public_key.rs  set_plugin.rs  signing.rs
app/rust/src/handlers/public_key/: ui.rs  xpub.rs
app/rust/src/integration_tests/: mod.rs  sign.rs
app/rust/src/parser/: address.rs  addressed_call.rs  addressed_call_payloads.rs  asset_id.rs  avm_output.rs  chain_id.rs  constants.rs  coreth.rs  error.rs  initial_state.rs  inputs.rs  l1_validator.rs  message.rs  network_info.rs  node_id.rs  object_list.rs  operations.rs  outputs.rs  pchain_owner.rs  proof_of_possession.rs  pvm_output.rs  snapshots_common.rs  subnet_auth.rs  subnet_id.rs  transactions.rs  utils.rs  utxo_id.rs  validator.rs  warp_message.rs
app/rust/src/parser/coreth/: data.rs  export_tx.rs  (+5 more)
app/rust/src/utils/: apdu_unwrap.rs  apdu_wrapper.rs  app_mode.rs  blind_sign_toggle.rs  buffer_upload.rs  convert_to_rs.rs  ui.rs
app/src/: addr.c  addr.h  apdu_handler.c  coin.h  commands.h  constants.rs  crypto.c  crypto.h  crypto.rs  crypto_helper.c  crypto_helper.h  dispatcher.rs  eth_addr.c  eth_addr.h  eth_ui_patch.c  eth_utils.c  eth_utils.h  handler.c  handler.h  handlers.rs  keys_def.h  keys_personalizations.h  lib.rs  network_icons.c  parser.c  parser.rs  parser_impl.c  parser_impl.h  parser_txdef.h  utils.rs  wallet_id.c  wallet_id.h  xaddr.c  xaddr.h
app/src/common/: actions.c  actions.h  main.c  parser.h  parser_common.h  tx.c  tx.h
app/src/handlers/: avax.rs  eth.rs  lock.rs  mod.rs  parser_common.rs  public_key.rs  signing.rs  utils.rs  version.rs  wallet_id.rs
app/src/handlers/avax/: blind_signing.rs  message.rs  preamble.rs  sign_hash.rs  signing.rs
app/src/handlers/dev/: debug.rs
app/src/handlers/eth/: blind_signing.rs  get_app_configuration.rs  personal_msg.rs  provide_erc20.rs  provide_nft_info.rs  public_key.rs  set_plugin.rs  signing.rs
app/src/handlers/public_key/: ui.rs  xpub.rs
app/src/handlers/signing/: blind_sign_toggle.rs
app/src/integration_tests/: eth_public_key.rs  eth_sign.rs  extended_public_key.rs  mod.rs  public_key.rs  sign.rs  version.rs  wallet_id.rs
app/src/parser/: address.rs  asset_id.rs  avm_output.rs  base_tx.rs  constants.rs  coreth.rs  defer.rs  error.rs  initial_state.rs  inputs.rs  message.rs  network_info.rs  node_id.rs  object_list.rs  operations.rs  outputs.rs  proof_of_possession.rs  pvm_output.rs  subnet_auth.rs  subnet_id.rs  transactions.rs  utils.rs  utxo_id.rs  validator.rs
app/src/parser/coreth/: data.rs  export_tx.rs  import_tx.rs  inputs.rs  native.rs  nft_info.rs  outputs.rs
app/src/parser/inputs/: secp_transfer_input.rs
app/src/parser/operations/: nft_mint_operation.rs  nft_transfer_operation.rs  secp_mint_operation.rs
app/src/parser/outputs/: nft_mint_output.rs  nft_transfer_output.rs  secp256k1_mint_output.rs  secp256k1_transfer_output.rs  secp_mint_output.rs  secp_output_owners.rs  secp_transfer_output.rs
app/src/parser/snapshots/: rslib__parser__transactions__tests__tx_ui@add_delegator.json.snap  rslib__parser__transactions__tests__tx_ui@add_subnet_validator.json.snap  rslib__parser__transactions__tests__tx_ui@add_validator.json.snap  rslib__parser__transactions__tests__tx_ui@c_import_from_x.json.snap  rslib__parser__transactions__tests__tx_ui@create_subnet.json.snap  rslib__parser__transactions__tests__tx_ui@no_decimal.json.snap  rslib__parser__transactions__tests__tx_ui@p_export_to_x2.json.snap  rslib__parser__transactions__tests__tx_ui@p_import_from_c.json.snap  rslib__parser__transactions__tests__tx_ui@p_import_from_x2.json.snap  rslib__parser__transactions__tests__tx_ui@sample.json.snap  rslib__parser__transactions__tests__tx_ui@sample2.json.snap  rslib__parser__transactions__tests__tx_ui@sample_fuji.json.snap  rslib__parser__transactions__tests__tx_ui@sample_fuji2.json.snap  rslib__parser__transactions__tests__tx_ui@x_export_to_c.json.snap  rslib__parser__transactions__tests__tx_ui@x_export_to_c2.json.snap  rslib__parser__transactions__tests__tx_ui@x_operation.json.snap
app/src/parser/testvectors/: add_validator.json  create_chain.json  create_subnet.json  no_decimal.json  p_import_from_c.json  sample2.json  sample_fuji.json  sample_fuji2.json  x_export_to_c2.json  x_export_to_c3.json  x_import_from_p.json
app/src/parser/transactions/: avm.rs  base_export.rs  base_import.rs  base_tx.rs  base_tx_fields.rs  create_chain_tx.rs  create_subnet_tx.rs  export_tx.rs  import_tx.rs  pvm.rs  transfer.rs  tx_header.rs
app/src/parser/utils/: time.rs
app/src/parser/validator/: weight_type.rs
app/src/utils/: apdu_wrapper.rs  app_mode.rs  blind_sign_toggle.rs  buffer_upload.rs  convert_to_rs.rs  keccak.rs
app/src/utils/keccak/: keccak_impl.rs
app/tests/: eth_public_key.rs  eth_sign.rs  eth_xpub.rs  extended_public_key.rs  prelude.rs  public_key.rs  sign.rs  wallet_id.rs
(+324 files in other folders)
