[workspace]
resolver = "2"
members = [ "app", "app-derive" ]
exclude = [ "hfuzz" ]

[workspace.package]
edition = "2018"
authors = ["Zondax <hello@zondax.ch>"]

[workspace.dependencies]
bolos = { git = "https://github.com/Zondax/ledger-rust", rev = "7eaddc9" }
zemu-sys = { git = "https://github.com/Zondax/ledger-rust", rev = "7eaddc9" }
zuit = { git = "https://github.com/Zondax/ledger-rust", rev = "7eaddc9" }

[profile.dev]
panic = "abort"

[profile.release]
lto = false
codegen-units = 1
debug = false
opt-level = "z"
