[package]
name = "avalanche-app"
version = "0.1.0"
edition = "2018"
authors = ["Zondax <hello@zondax.ch>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rslib"
crate-type = ["staticlib", "rlib"]

[features]
dev = []
derive-debug = []
blind-sign= []
blind-sign-toggle = ["blind-sign"]
default = ["derive-debug"]

[dependencies]
bolos = { git = "https://github.com/Zondax/ledger-rust", rev = "e8b678f" }
zemu-sys = { git = "https://github.com/Zondax/ledger-rust", rev = "e8b678f" }

no-std-compat = { version = "0.4" }
cfg-if = "1.0.0"
git-testament = { version = "0.2.1", default-features = false }

avalanche-app-derive = { path = "../app-derive" }
arrayvec = { version = "0.7", default-features = false }
arrayref = "0.3.6"
nom = { version = "7.1.1", default-features = false}
bytemuck = { version = "1" }
lexical-core = { version = "0.7", features = ["libm"], default-features = false }
educe = "0.4.19"
crunchy = "0.2.2"
byteorder = { version = "1.4.3", default-features = false }

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[dev-dependencies]
zbs58 = { version = "0.4.0", features = ["cb58"], git = "https://github.com/Zondax/bs58-rs", branch = "cb58", package = "bs58" }
no-std-compat = { version = "0.4", features = ["std"] }
serial_test = "0.5"
zuit = { git = "https://github.com/Zondax/ledger-rust", rev = "e8b678f" }
bolos = { git = "https://github.com/Zondax/ledger-rust", rev = "e8b678f", features = ["derive-debug"] }
bolos-common = { git = "http://github.com/Zondax/ledger-rust", rev = "e8b678f", features = ["bip32-display"] }
hex = "0.4.3"
arrayvec = { version = "0.7"}
time = { version = "0.3.15", features = ["formatting"]}
k256 = { version = "0.9.6", features = ["ecdsa", "keccak256"] }
rand = "0.8.5"
insta = { version = "1", features = ["glob"] }
serde_json = "1.0.85"
itertools = "0.10.4"
proptest = "1"
